--- a/my_1.html
+++ b/my_1.html
@@ -1,1 +1,34 @@
-hello 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>js初体验</title>
+    <!--2.内嵌的js-->
+    <script>
+        var num1 = 010,
+            num2 = 110,
+            num3 = 0x01;
+        console.log(num1);
+        console.log(num2);
+        console.log(isNaN(num3));
+        console.log(Number.MAX_VALUE);
+        console.log(Number.MAX_VALUE * 2);
+        console.log(-Number.MAX_VALUE * 2 - 'wanz');
+        console.log(isNaN('12J'));
+    </script>
+
+    <!--3.外部的js-->
+    <!-- <script src="my.js"></script> -->
+</head>
+<!--  -->
+
+<body>
+    <!--1.行内式的js 直接写到元素的内部-->
+    <input type="button" value="click" onclick="alert('success!')">
+
+</body>
+
+</html>
